--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello WORLD</h1>
     <!--tarjeta simple-->
     <h1>Example heading <span class="badge badge-secondary">New</span></h1>
     <div class="card" style="width: 18rem;">
       <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Carta Pequeña</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
